@@ -157,7 +157,7 @@ public class IOSApplication implements Application {
 		Gdx.gl30 = graphics.gl30;
 		this.files = new IOSFiles();
 		this.audio = new IOSAudio(config);
-		this.net = new IOSNet(this);
+		this.net = new IOSNet(this, config);
 
 		Gdx.files = this.files;
 		Gdx.graphics = this.graphics;
