@@ -30,11 +30,12 @@ import com.badlogic.gdx.net.SocketHints;
 
 public class IOSNet implements Net {
 
-	NetJavaImpl netJavaImpl = new NetJavaImpl();
+	NetJavaImpl netJavaImpl;
 	final UIApplication uiApp;
 
-	public IOSNet (IOSApplication app) {
+	public IOSNet (IOSApplication app, IOSApplicationConfiguration configuration) {
 		uiApp = app.uiApp;
+		netJavaImpl = new NetJavaImpl(configuration.maxNetThreads);
 	}
 
 	@Override
